Change padding size

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ textarea {
 }
 
 button {
- padding: .5em .75em;
+ padding: 1rem .5rem;
  border: 10px solid;
  color: #fff;
  background-color: #000;
